--- a/Lib.Release/Lib.Release.csproj
+++ b/Lib.Release/Lib.Release.csproj
@@ -11,11 +11,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DotNet.Basics" Version="11.5.2" />
+		<PackageReference Include="DotNet.Basics" Version="11.5.4" />
 		<PackageReference Include="DotNet.Basics.Cli" Version="11.6.5" />
-		<PackageReference Include="DotNet.Basics.Pipelines" Version="11.6.1" />
-		<PackageReference Include="DotNet.Basics.Serilog" Version="4.6.1" />
+		<PackageReference Include="DotNet.Basics.Pipelines" Version="11.6.2" />
+		<PackageReference Include="DotNet.Basics.Serilog" Version="4.6.2" />
 		<PackageReference Include="LibGit2Sharp" Version="0.31.0" />
+		<PackageReference Include="Microsoft.Web.Xdt" Version="3.1.0" />
 	</ItemGroup>
 
 </Project>
