--- a/Lib.Release/Lib.Release.csproj
+++ b/Lib.Release/Lib.Release.csproj
@@ -8,6 +8,16 @@
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>lib.release</ToolCommandName>
 		<PackageOutputPath>./bin/nupkg</PackageOutputPath>
+		<Description>Dotnet tool for packing and pushing to nuget.org</Description>
+		<Authors>rzmoz</Authors>
+		<Product />
+		<Company />
+		<RepositoryUrl>https://github.com/rzmoz/lib.release</RepositoryUrl>
+		<Version>0.0.0</Version>
+		<AssemblyVersion>0.0.0</AssemblyVersion>
+		<FileVersion>0.0.0</FileVersion>
+		<LangVersion>13.0</LangVersion>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	<ItemGroup>
